alias(
    name = "miniboard",
    actual = "//server/cmd/miniboard:miniboard",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "docker_push",
    format = "Docker",
    image = "//server/cmd/miniboard:image",
    registry = "index.docker.io",
    repository = "ngalayko/miniboard",
    tag = "{VERSION}",
)
