load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "logging.go",
        "server.go",
    ],
    importpath = "miniboard.app/api",
    visibility = ["//visibility:public"],
    deps = [
        "//api/users:go_default_library",
        "//api/users/authentications:go_default_library",
        "//jwt:go_default_library",
        "//passwords:go_default_library",
        "//proto/users/authentications/v1:go_default_library",
        "//proto/users/v1:go_default_library",
        "//storage:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//proto/users/v1:go_default_library",
        "//storage:go_default_library",
        "//storage/bolt:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
