load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "keys.go",
        "service.go",
    ],
    importpath = "miniboard.app/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "//storage/resource:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@in_gopkg_square_go_jose_v2//jwt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "keys_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//storage:go_default_library",
        "//storage/bolt:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
