load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "miniboard.app/passwords",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "//storage/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_raja_argon2pw//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//storage:go_default_library",
        "//storage/bolt:go_default_library",
        "//storage/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
