load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "storage.go",
    ],
    importpath = "miniboard.app/storage",
    visibility = ["//visibility:public"],
    deps = ["//storage/resource:go_default_library"],
)
