package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_svelte//:defs.bzl", "bundle_dev", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
    deps = [
        "//web/client:Client",
        "//web/components/articles:Articles",
        "//web/components/loginform:LoginForm",
        "//web/components/notfound:NotFound",
        "//web/components/router:Router",
        "//web/components/reader:Reader",
    ],
)

bundle_prod(
    name = "app",
    entry_point = "main.js",
    deps = [":App"],
)

exports_files(["index.html"])
