package(default_visibility = ["//visibility:public"])

load("//tools/svelte:defs.bzl", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
    deps = [
        "//web/client:Client",
        "//web/components/articles:Articles",
        "//web/components/loginform:LoginForm",
        "//web/components/notfound:NotFound",
        "//web/components/router:Router",
        "//web/components/reader:Reader",
    ],
)

bundle_prod(
    name = "app",
    entry_point = "main.js",
    deps = [":App"],
)

exports_files([
    "index.html",
])

genrule(
    name = "service_worker",
    srcs = [
        ":sw.js",
        ":App", # fake dependency to trigger rebuild
    ],
    outs = ["serviceWorker.js"],
    cmd = """
        sed "s/__VERSION__/$$(cat bazel-out/volatile-status.txt | grep BUILD_TIMESTAMP | cut -d' ' -f2)/g" <$(location :sw.js) > $@
    """,
    stamp = True,
)
