load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "src",
    format = "iife",
    sourcemap = "false",
    config_file = "rollup.config.bundle.js",
    srcs = glob(["src/**/*"], exclude = ["src/serviceWorker.js"]),
    entry_points = {
        "src/main.js": "bundle",
    },
    deps = [
        "@npm//svelte",
        "@npm//navaid",
        "@npm//rollup-plugin-svelte",
        "@npm//@rollup/plugin-replace",
        "@npm//rollup-plugin-node-resolve",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-terser",
    ],
    output_dir = True,
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "service_worker",
    format = "iife",
    sourcemap = "false",
    config_file = "rollup.config.serviceWorker.js",
    srcs = ["src/serviceWorker.js"],
    entry_points = {
        "src/serviceWorker.js": "serviceWorker",
    },
    deps = [
        "@npm//@rollup/plugin-replace",
        "@npm//rollup-plugin-terser",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["index.html"])
