load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "authorization.go",
        "grpc.go",
        "http.go",
        "server.go",
        "ssl.go",
    ],
    importpath = "miniboard.app/api",
    visibility = ["//visibility:public"],
    deps = [
        "//server/articles:go_default_library",
        "//server/codes:go_default_library",
        "//server/email:go_default_library",
        "//server/jwt:go_default_library",
        "//server/proto/codes/v1:go_default_library",
        "//server/proto/users/articles/v1:go_default_library",
        "//server/proto/users/v1:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/resource:go_default_library",
        "//server/users:go_default_library",
        "//server/web:go_default_library",
        "@com_github_andybalholm_brotli//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/logrus:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//encoding/gzip:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//server/email/mock:go_default_library",
        "//server/proto/users/articles/v1:go_default_library",
        "//server/proto/users/v1:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/bolt:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
