load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "compression.go",
        "grpc.go",
        "http.go",
        "server.go",
        "ssl.go",
    ],
    importpath = "miniboard.app/api",
    visibility = ["//visibility:public"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/articles:go_default_library",
        "//server/codes:go_default_library",
        "//server/email:go_default_library",
        "//server/jwt:go_default_library",
        "//server/proto/codes/v1:go_default_library",
        "//server/proto/tokens/v1:go_default_library",
        "//server/proto/users/articles/v1:go_default_library",
        "//server/proto/users/v1:go_default_library",
        "//server/storage:go_default_library",
        "//server/tokens:go_default_library",
        "//server/users:go_default_library",
        "//server/web:go_default_library",
        "@com_github_andybalholm_brotli//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/logrus:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//encoding/gzip:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)
