load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "miniboard.app/articles",
    visibility = ["//visibility:public"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/proto/users/articles/v1:go_default_library",
        "//server/reader:go_default_library",
        "//server/reader/http:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/proto/users/articles/v1:go_default_library",
        "//server/reader/mock:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/bolt:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
