load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "proxy.go",
        "service.go",
    ],
    importpath = "miniboard.app/codes",
    visibility = ["//visibility:public"],
    deps = [
        "//server/email:go_default_library",
        "//server/jwt:go_default_library",
        "//server/proto/codes/v1:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
