load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["images.go"],
    importpath = "miniboard.app/images",
    visibility = ["//visibility:public"],
    deps = [
        "//server/storage:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["images_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//server/storage:go_default_library",
        "//server/storage/bolt:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
