load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rss.go"],
    importpath = "miniboard.app/rss",
    visibility = ["//visibility:public"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/articles:go_default_library",
        "//server/proto/users/rss/v1:go_default_library",
        "@com_github_mmcdole_gofeed//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
