load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "miniboard.app/users",
    visibility = ["//visibility:public"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/proto/users/v1:go_default_library",
        "//server/storage:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//server/api/actor:go_default_library",
        "//server/proto/users/v1:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/bolt:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
