load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["web.go"],
    data = [
        "//web:src",
        "//web:service_worker",
        "//web/static",
        "//web:index.html",
    ],
    importpath = "miniboard.app/web",
    visibility = ["//visibility:public"],
)
