load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["web.go"],
    data = [
        "//web/app",
        "//web/app:index.html",
        "//web/app/static",
        "//web/service_worker",
    ],
    importpath = "miniboard.app/web",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
