load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bucket.go",
        "db.go",
    ],
    importpath = "miniboard.app/storage/bolt",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "//storage/resource:go_default_library",
        "@com_github_coreos_bbolt//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bucket_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//storage:go_default_library",
        "//storage/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
