load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "name.go",
        "resource.go",
    ],
    importpath = "miniboard.app/storage/resource",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["name_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
