load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "app",
    srcs = glob(["src/**/*"]),
    config_file = "rollup.config.js",
    entry_point = "src/main.js",
    format = "iife",
    sourcemap = "false",
    visibility = ["//visibility:public"],
    deps = [
        # runtime
        "//server/proto/codes/v1:codes_grpc_web",
        "//server/proto/codes/v1:codes_commonjs_proto",
        "//server/proto/tokens/v1:tokens_grpc_web",
        "//server/proto/tokens/v1:tokens_commonjs_proto",
        "//server/proto/users/v1:users_grpc_web",
        "//server/proto/users/v1:users_commonjs_proto",
        "//server/proto/users/articles/v1:articles_grpc_web",
        "//server/proto/users/articles/v1:articles_commonjs_proto",
        "@npm//navaid",
        "@npm//grpc-web",
        "@npm//google-protobuf",
        "@npm//pulltorefreshjs",

        # compile
        "@npm//svelte",
        "@npm//glob",
        "@npm//rollup-plugin-svelte",
        "@npm//@rollup/plugin-replace",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//rollup-plugin-terser",
    ],
)

exports_files(["index.html"])
