load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "rollup",
    srcs = glob(["src/**/*"]),
    config_file = "rollup.config.js",
    entry_points = {
        "src/main.js": "app",
    },
    format = "iife",
    sourcemap = "false",
    output_dir = True,
    deps = [
        # runtime
        "//server/proto/codes/v1:codes_grpc_web",
        "//server/proto/codes/v1:codes_commonjs_proto",
        "//server/proto/tokens/v1:tokens_grpc_web",
        "//server/proto/tokens/v1:tokens_commonjs_proto",
        "//server/proto/users/v1:users_grpc_web",
        "//server/proto/users/v1:users_commonjs_proto",
        "//server/proto/users/articles/v1:articles_grpc_web",
        "//server/proto/users/articles/v1:articles_commonjs_proto",
        "@npm//svelte-routing",
        "@npm//grpc-web",
        "@npm//google-protobuf",

        # compile
        "@npm//svelte",
        "@npm//glob",
        "@npm//rollup-plugin-svelte",
        "@npm//@rollup/plugin-replace",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//rollup-plugin-terser",
    ],
)

genrule(
    name = "app",
    srcs = [":rollup"],
    outs = [
        "app.js",
    ],
    cmd = """
        find . -name "app.js" -exec mv {} $(location :app.js) \;
    """,
    visibility = ["//web:__subpackages__"],
)
