load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "rollup",
    srcs = glob(["src/**/*"]),
    config_file = "rollup.config.app.js",
    entry_points = {
        "src/main.js": "app",
    },
    format = "iife",
    sourcemap = "false",
    output_dir = True,
    deps = [
        # runtime
        "//server/proto/codes/v1:codes_grpc_web",
        "//server/proto/codes/v1:codes_commonjs_proto",
        "//server/proto/tokens/v1:tokens_grpc_web",
        "//server/proto/tokens/v1:tokens_commonjs_proto",
        "//server/proto/users/v1:users_grpc_web",
        "//server/proto/users/v1:users_commonjs_proto",
        "//server/proto/users/articles/v1:articles_grpc_web",
        "//server/proto/users/articles/v1:articles_commonjs_proto",
        "//server/proto/users/sources/v1:sources_grpc_web",
        "//server/proto/users/sources/v1:sources_commonjs_proto",
        "@npm//svelte-routing",
        "@npm//grpc-web",
        "@npm//google-protobuf",

        # compile
        "@npm//svelte",
        "@npm//glob",
        "@npm//rollup-plugin-svelte",
        "@npm//@rollup/plugin-replace",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//rollup-plugin-terser",
        "@npm//rollup-plugin-bundle-html",
    ],
)

rollup_bundle(
    name = "sw",
    srcs = ["src/sw.js"],
    config_file = "rollup.config.sw.js",
    entry_point = "src/sw.js",
    format = "iife",
    sourcemap = "false",
    output_dir = True,
    deps = [
        "@npm//@rollup/plugin-replace",
        "@npm//rollup-plugin-terser",
    ],
)

genrule(
    name = "app",
    srcs = [
        ":rollup",
        ":sw",
    ],
    outs = [
        "app.js",
        "app.css",
        "sw.js",
        "index.html",
    ],
    cmd = """
        find . -name "app.js" -exec mv {} $(location :app.js) \;
        find . -name "app.css" -exec mv {} $(location :app.css) \;
        find . -name "sw.js" -exec mv {} $(location :sw.js) \;
        find . -name "index.html" -exec mv {} $(location :index.html) \;
    """,
    visibility = ["//web:__subpackages__"],
)
