load("@build_bazel_rules_svelte//:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "Client",
    entry_point = "Client.svelte",
    deps = [
        "//web/client/api:Api",
        "//web/client/authorizations:Authorizations",
        "//web/client/authorizations/codes:Codes",
        "//web/client/articles:Articles",
        "//web/client/users:Users",
    ],
)
