load("//build_rules/svelte:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "Client",
    entry_point = "Client.svelte",
    deps = [
        "//web/client/api:Api",
        "//web/client/codes:Codes",
        "//web/client/articles:Articles",
        "//web/client/users:Users",
    ],
)
