load("@build_bazel_rules_svelte//:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "Add",
    entry_point = "Add.svelte",
)

svelte(
    name = "Logout",
    entry_point = "Logout.svelte",
)

svelte(
    name = "Search",
    entry_point = "Search.svelte",
)
