load("//build_rules/svelte:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "Add",
    entry_point = "Add.svelte",
)

svelte(
    name = "BookOpen",
    entry_point = "BookOpen.svelte",
)

svelte(
    name = "List",
    entry_point = "List.svelte",
)

svelte(
    name = "Logout",
    entry_point = "Logout.svelte",
)

svelte(
    name = "Star",
    entry_point = "Star.svelte",
)
