load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "service_worker",
    srcs = ["src/service_worker.js"],
    config_file = "rollup.config.js",
    entry_points = {
        "src/service_worker.js": "service_worker",
    },
    format = "iife",
    sourcemap = "false",
    visibility = ["//web:__subpackages__"],
    deps = [
        "@npm//@rollup/plugin-replace",
        "@npm//rollup-plugin-terser",
    ],
)
