package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")

svelte(
    name = "App",
    entry_point = "App.svelte",
    srcs = ["main.js"],
    deps = [
        "//web/src/pages/login:Login",
        "//web/src/pages/user:User",
        "//web/src/components/router:Router",
    ],
)

bundle_prod(
    name = "app",
    entry_point = "main.js",
    deps = [":App"],
)

exports_files(["index.html"])
