package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")

svelte(
    name = "App",
    entry_point = "App.svelte",
    srcs = ["main.js"],
    deps = [
        "//web/src/components/header:Header",
        "//web/src/components/loginform:LoginForm",
        "//web/src/components/router:Router",
        "//web/src/components/articles:Articles",
        "//web/src/components/notfound:NotFound",
    ],
)

bundle_prod(
    name = "app",
    entry_point = "main.js",
    deps = [":App"],
)

exports_files(["index.html"])
