package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_svelte//:defs.bzl", "bundle_dev", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
    deps = [
        "//web/src/components/client:Client",
        "//web/src/components/articles:Articles",
        "//web/src/components/header:Header",
        "//web/src/components/loginform:LoginForm",
        "//web/src/components/notfound:NotFound",
        "//web/src/components/router:Router",
    ],
)

bundle_prod(
    name = "app",
    entry_point = "main.js",
    deps = [":App"],
)

exports_files(["index.html"])
