load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "miniboard.app/api/users/authentications",
    visibility = ["//visibility:public"],
    deps = [
        "//jwt:go_default_library",
        "//proto/users/authentications/v1:go_default_library",
        "//storage:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
