load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "users_proto",
    srcs = ["users_service.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "users_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "miniboard.app/proto/users/v1",
    proto = ":users_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":users_go_proto"],
    importpath = "miniboard.app/proto/users/v1",
    visibility = ["//visibility:public"],
)
