load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "miniboard.app/cmd/miniboard",
    visibility = ["//visibility:private"],
    deps = [
        "//server/api:go_default_library",
        "//server/email:go_default_library",
        "//server/email/disabled:go_default_library",
        "//server/email/smtp:go_default_library",
        "//server/storage:go_default_library",
        "//server/storage/bolt:go_default_library",
        "//server/storage/redis:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "miniboard",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "local",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    data = [
        "//certs:local.miniboard.app.cert",
        "//certs:local.miniboard.app.key",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
